--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
          <li> Docker </li>
          <li> Ansible </li>
          <li> Integración continua> madurez y productividad en el desarollo del software </li>
+         <li> Kubernetes </li>
      </ul>
 </body>
 </html>
