actualizando nombre del curso de docker

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
      <ul>
          <li> Vagrant </li>
-         <li> Docker </li>
+         <li> Curso de Docker: creando containers sin dolro de cabeza </li>
          <li> Ansible </li>
          <li> Integración continua> madurez y productividad en el desarollo del software </li>
          <li> Kubernetes </li>
