corrigiendo curso de vagrant

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
      <ul>
-         <li> Vagrant </li>
+         <li> Vagrant: gerenciando maquinas virtules </li>
          <li> Docker: creando containers sin dolor de cabeza </li>
          <li> Ansible </li>
          <li> Integración continua> madurez y productividad en el desarollo del software </li>
