Revert "cambiando el nombre del curso de ansible"
This reverts commit 9df4569eedc25450322f4cb3bf3bcc962e67cba9.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
      <ul>
          <li> Vagrant: gerenciando maquinas virtules </li>
          <li> Docker: creando containers sin dolor de cabeza </li>
-         <li> Ansible. infraestructura como coidgo </li>
+         <li> Ansible </li>
          <li> Integración continua> madurez y productividad en el desarollo del software </li>
          <li> Kubernetes </li>
      </ul>
