--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
          <li> Docker: creando containers sin dolor de cabeza </li>
          <li> Ansible </li>
          <li> Integración continua> madurez y productividad en el desarollo del software </li>
-         <li> Kubernetes </li>
+         <li> Kubernetes: introduccion a la orquestacion de containers </li>
      </ul>
 </body>
 </html>
