--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
      <ul>
          <li> Vagrant: gerenciando maquinas virtules </li>
          <li> Docker: creando containers sin dolor de cabeza </li>
-         <li> Ansible </li>
+         <li> Ansible: Su ifraestructua como codigo </li>
          <li> Integración continua> madurez y productividad en el desarollo del software </li>
          <li> Kubernetes: introduccion a la orquestacion de containers </li>
      </ul>
